--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -18,15 +18,17 @@
         android:layout_margin="5dp"
         android:gravity="center_vertical"
         android:layout_weight="1"
-        android:textAppearance="?android:textAppearanceLarge"/>
-    <!--<EditText-->
-        <!--android:id="@+id/gram"-->
-        <!--android:hint="公克"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:layout_weight="1"-->
-        <!--android:layout_margin="5dp"-->
-        <!--android:inputType="numberDecimal"-->
-        <!--android:background="@drawable/edittextstyle"-->
-        <!--android:gravity="center"/>-->
+        android:textAppearance="?android:textAppearanceSmall"/>
+    <EditText
+        android:id="@+id/amount"
+        android:hint="公克"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_margin="5dp"
+        android:imeOptions="actionDone"
+        android:background="@drawable/edittextstyle"
+        android:gravity="center"
+        android:singleLine="true"
+        android:maxLines="1"/>
 </LinearLayout>
