--- a/app/src/main/res/layout/record_dmmanage.xml
+++ b/app/src/main/res/layout/record_dmmanage.xml
@@ -18,7 +18,7 @@
         android:id="@+id/imageViewself"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="15dp"
-        android:layout_marginTop="80dp"/>
+        android:layout_marginTop="30dp"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -43,6 +43,18 @@
         android:layout_gravity="center_horizontal"
         android:onClick="btnDMCheckRegular"
         />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="15dp"
+        android:src="@drawable/gragh"
+        android:id="@+id/imageGraphic"
+        android:layout_gravity="center_horizontal"
+        android:onClick="btnDMGraphic"
+        />
+
 
 
     <RelativeLayout
