--- a/app/src/main/res/layout/activity_record_dm_analysis.xml
+++ b/app/src/main/res/layout/activity_record_dm_analysis.xml
@@ -8,13 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        >
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:background="@android:color/white"
+
             >
 
             <TableRow
