--- a/app/src/main/res/layout/activity_record_remind.xml
+++ b/app/src/main/res/layout/activity_record_remind.xml
@@ -6,28 +6,55 @@
                 android:background="@color/bg">
     <ImageView
         android:id="@+id/standard"
-        android:layout_width="100dp"
+        android:layout_width="75dp"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
-        android:src="@drawable/standard_sector"/>
+        android:src="@drawable/standard_sector"
+        android:onClick="btnChangeTime"
+        android:visibility="gone"/>
+    <ImageView
+        android:id="@+id/breakfast"
+        android:layout_width="75dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:src="@drawable/breakfastred"
+        android:onClick="btnChangeTime"/>
+    <ImageView
+        android:id="@+id/lunch"
+        android:layout_width="75dp"
+        android:layout_height="50dp"
+        android:src="@drawable/lunchblue"
+        android:layout_toRightOf="@id/breakfast"
+        android:onClick="btnChangeTime"/>
+    <ImageView
+        android:id="@+id/dinner"
+        android:layout_width="75dp"
+        android:layout_height="50dp"
+        android:src="@drawable/dinnerblue"
+        android:layout_toRightOf="@id/lunch"
+        android:onClick="btnChangeTime"/>
     <TextView
         android:id="@+id/hey"
-        android:layout_below="@id/standard"
+        android:layout_below="@id/breakfast"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-10dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:background="@drawable/hey"/>
+        android:padding="20dp"
+        android:background="@drawable/hey"
+        android:text=""/>
 
     <TextView
         android:id="@+id/note"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:padding="30dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/hey"
-        android:background="@drawable/note"/>
+        android:background="@drawable/note"
+        android:text=""/>
 
     <ImageView
         android:layout_width="100dp"
