--- a/app/src/main/res/layout/record_analysis_list_item.xml
+++ b/app/src/main/res/layout/record_analysis_list_item.xml
@@ -16,23 +16,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:weightSum="3"
         android:orientation="vertical">
+
+        <RatingBar
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ratingBar"
+            android:layout_weight="1"
+            android:stepSize="1"
+            android:numStars="5"
+            android:layout_marginLeft="-10dp"/>
 
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textAppearance="?android:textAppearanceLarge"
             android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:textAppearance="?android:textAppearanceLarge"/>
+            android:gravity="center_vertical"/>
 
         <TextView
             android:id="@+id/store"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:gravity="center_vertical"
-            />
+            android:gravity="top|left"/>
+
     </LinearLayout>
 
 </LinearLayout>
