--- a/app/src/main/res/layout/record_dm_checkregular.xml
+++ b/app/src/main/res/layout/record_dm_checkregular.xml
@@ -173,7 +173,8 @@
                         android:layout_weight="1"
                         android:layout_height="50dp"
                         android:background="@drawable/edittextstyle"
-                        android:id="@+id/break_insulin"/>
+                        android:id="@+id/break_insulin"
+                        style="@style/edittext"/>
                     <EditText
                         android:layout_width="match_parent"
                         android:layout_weight="1"
