--- a/app/src/main/res/layout/activity_record_dm_graphic.xml
+++ b/app/src/main/res/layout/activity_record_dm_graphic.xml
@@ -55,6 +55,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/chartlayout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -66,13 +67,22 @@
             android:layout_below="@id/btn_zone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:layout_margin="15dp">
             <com.github.mikephil.charting.charts.LineChart
                 android:id="@+id/chart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
         </RelativeLayout>
+
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="60dp"
+            android:src="@drawable/regular"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:stateListAnimator="@drawable/btn_selector"
+            android:onClick="btnCheckClick"/>
 <!--
         <LinearLayout
             android:orientation="horizontal"
