--- a/app/src/main/res/layout/careinfo_item.xml
+++ b/app/src/main/res/layout/careinfo_item.xml
@@ -4,13 +4,17 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
     <ImageView
-        android:layout_weight="3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    <TextView
+        android:id="@+id/imageView"
         android:layout_weight="1"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ico"/>
+    <TextView
+        android:id="@+id/textView"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="30dp"
-        android:text="123"/>
+        android:layout_height="40dp"
+        android:textSize="20dp"
+        android:text="慢性疾病"/>
 </LinearLayout>
