--- a/app/src/main/res/layout/activity_record_dm_analysis.xml
+++ b/app/src/main/res/layout/activity_record_dm_analysis.xml
@@ -10,11 +10,15 @@
         android:fillViewport="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
-
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fillViewport="true">
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
 
             >
 
@@ -126,5 +130,6 @@
                     android:text="舒張壓"/>
             </TableRow>
         </TableLayout>
+        </HorizontalScrollView>
     </ScrollView>
 </RelativeLayout>
