--- a/app/src/main/res/layout/record_dmmanage.xml
+++ b/app/src/main/res/layout/record_dmmanage.xml
@@ -18,7 +18,8 @@
         android:id="@+id/imageViewself"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="15dp"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        android:onClick="btnDIY"/>
 
     <ImageView
         android:layout_width="wrap_content"
