--- a/app/src/main/res/layout/register01.xml
+++ b/app/src/main/res/layout/register01.xml
@@ -36,6 +36,7 @@
             android:textColor="#000079"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/maillayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -62,6 +63,7 @@
     </LinearLayout>
 
      <LinearLayout
+         android:id="@+id/passlayout"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
